WindGroup Dev/src/objects/Checklist_Master__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Module</label>
        <referenceTo>Mobile_Module__c</referenceTo>
        <relationshipLabel>Checklist Masters</relationshipLabel>
        <relationshipName>Checklist_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Schedule__c</fullName>
        <label>Operation Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Operation_Schedule</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Checklist_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Frequency__c</fullName>
        <label>Schedule Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Operation_Schedule__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Checklist Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Mobile_Module__c</columns>
        <columns>Property__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllJ8</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Mobile_Module__c</columns>
        <columns>Property__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction 8</value>
        </filters>
        <label>All J8</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-MC-{000000}</displayFormat>
        <label>Checklist Master ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>